SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})

CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.6)


FIND_PACKAGE(Torch REQUIRED)
  
INCLUDE_DIRECTORIES(${Torch_SOURCE_INCLUDES})
INCLUDE_DIRECTORIES("lib/thfftw")
  
ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(pkg)



